tests/miniJava/neg/006155_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { return while ( 0 ) { } } }
